# RealFunctionInterface

./: CMakeLists.txt  driver.cpp  makefile  polynomial.cpp  polynomial.h  real_function.cpp  real_function.h
.cache/clangd/index/: binary_operation_function.cpp.B6FAA162702FCE50.idx  binary_operation_function.h.C27FECC3EA348059.idx  driver.cpp.1F490BEBB863DDA4.idx  polynomial.cpp.8DB0257045D8B006.idx  polynomial.h.1F6E4B8298A02487.idx  real_function.cpp.06CD617A9767ED43.idx  real_function.h.547A02E0896DD51C.idx  sum_function.cpp.88E54B7250064883.idx  sum_function.h.E911AF2C96C4D2D8.idx
lib/RealFunctionAPI/: CMakeLists.txt
lib/RealFunctionAPI/include/RealFunctionAPI/: binary_operation_function.h  custom_function.h  difference_function.h  fraction_function.h  negated_function.h  polynomial.h  product_function.h  real_function.h  real_function_base.h  real_math.h  special_function.h  sum_function.h
lib/RealFunctionAPI/src/: binary_operation_function.cpp  difference_function.cpp  fraction_function.cpp  negated_function.cpp  polynomial.cpp  product_function.cpp  real_function.cpp  real_function_base.h  real_function_pool.h  real_math.cpp  special_function.cpp  sum_function.cpp
lib/RealFunctionPool/: .cproject  .project  CMakeLists.txt
src/: CMakeLists.txt  driver.cpp
src/RealFunctionAPI/: CMakeLists.txt  binary_operation_function.cpp  binary_operation_function.h  polynomial.cpp  polynomial.h  real_function.cpp  real_function.h  sum_function.cpp  sum_function.h
tests/: CMakeLists.txt  tester.cpp
